Fix ProductItem layout spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -333,6 +333,9 @@ blockquote {
   margin-left: auto;
   padding-right: 16px;
   padding-left: 16px; }
+  .container--no-gutters {
+    padding-right: 0;
+    padding-left: 0; }
 
 .row {
   display: flex;
